# CPractice

./: .gitignore
API_Calls/: CMakeLists.txt  api_call.c  unit_test.c  unit_test.sh
API_Calls/src/: api_call.c  api_call.h
API_Calls/src/unit_test/: unit_test.c
BinaryTimer/: binaryTimer  binaryTimer.c
